<resources>
    <string name="app_name">Abacus</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_accueil">Accueil</string>
    <string name="menu_vente">Vente</string>
    <string name="menu_achat">Achat</string>
    <string name="menu_commande_client">Commande client</string>
    <string name="menu_commande_fournisseur">Commande fournisseur</string>
    <string name="menu_journal">Journal des opérations</string>
    <string name="billetage">Billetage</string>
    <string name="licence">Licence</string>
    <string name="param">Paramètres</string>
    <string name="help">A propos</string>
    <string name="menu_produit">Produit</string>
    <string name="menu_fournisseur">Fournisseur</string>
    <string name="menu_client">Client</string>
    <string name="menu_payement">Règlements - Dettes</string>
    <string name="sdabsent">SD Absente</string>
    <string name="picturesave">Image sauvegardée</string>
    <string name="menu_stat">Statistiques</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="produit">Produit</string>
    <string name="prix_input">Prix</string>
    <string name="quantite_input">Qte</string>
    <string name="prix">Prix</string>
    <string name="qt">Qte</string>
    <string name="remise_input">Remise</string>
    <string name="netapayer">A payer : </string>
    <string name="mtnrecu">Mt recu</string>
    <string name="client">Client</string>
    <string name="produithabituel">Produits habituels</string>
    <string name="remiseincorrectte">Remise incorrect</string>
    <string name="save_confirm">Enregistrer l\'opération?</string>
    <string name="data_errors1">Erreur: Veuillez entrer des données valides</string>
    <string name="data_errors2">Erreur: Veuillez valider le produit en cours de modification ou l"annuler</string>
    <string name="data_errors3">Erreur: Echec d"ajout d'une ligne</string>
    <string name="data_errors4">Erreur: Remise superieur au prix Total !!!</string>
    <string name="data_errors7">Erreur: Montant recu incorrect !!!</string>
    <string name="data_errors5">Erreur: Aucun element selectionné</string>
    <string name="data_errors6">Erreur</string>
    <string name="echec_ajout">Echec</string>
    <string name="echec_del">Echec</string>
    <string name="operation_success">Opération ajoutée</string>
    <string name="vente_success">Vente ajoutée</string>
    <string name="btn_nvo">Nouveau</string>
    <string name="btn_billet">billet</string>
    <string name="azero">Remettre à zero</string>
    <string name="close">Fermer</string>
    <string name="exit_confirm">Quittez ?</string>
    <string name="itemSelected"> sélectionné</string>
    <string name="action_del">Supprimer</string>
    <string name="send_loding">Opération en cours</string>
    <string name="wait">Veuillez patienter...</string>
    <string name="item_del">élément supprimé</string>
    <string name="menu_search">Recherche</string>
    <string name="ProduitListeActivity">Liste des produits</string>
    <string name="title_activity_produit">Produit</string>
    <string name="datechoice">Choisir la date</string>
    <string name="delconfirm">Supprimer?</string>
    <string name="tout">Tout</string>
    <string name="recurrent">Fréquent</string>
    <string name="nonSync">Non Sync</string>
    <string name="btn_valid">Valider</string>
    <string name="text_empty">liste vide</string>
    <string name="title_activity_produit_form">Produit</string>
    <string name="prixv">Prix de vente</string>
    <string name="produit_modif">Prix modifiable</string>
    <string name="prixa">Prix d\'achat</string>
    <string name="code">Code</string>
    <string name="libelle">Libelle</string>
    <string name="imprimer">Imprimer</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="delete">Supprimer</string>
    <string name="addfoto">Ajouter une image</string>
    <string name="echec">Echec</string>
    <string name="produit_success">Produit ajouté</string>
    <string name="unite">Unité</string>
    <string name="annuler">Annuler</string>
    <string name="modif">Modifier</string>
    <string name="action">Action</string>
    <string name="produit_suprimmer">Produit supprimer</string>
    <string name="menu_sync">Synchronisation</string>
    <string name="title_activity_caisse_setting">CaisseSetting</string>
    <string name="password">Mot de passe</string>
    <string name="valider">Valider</string>
    <string name="quiter">Quitter</string>
    <string name="login">Login</string>
    <string name="load_success">Chargement réusi</string>
    <string name="load_echec">Echec de chargement</string>
    <string name="aucuncaisse">Caisse introuvable</string>
    <string name="title_activity_parametre">Paramètres</string>
    <string name="changecmt">Changer de compte</string>
    <string name="reglege">Réglages</string>
    <string name="caisseno">"Caisse No : "</string>
    <string name="poroduinonmod">Produit non modifiable</string>
    <string name="prixpoin">"Prix: "</string>
    <string name="codepoint">"Code: "</string>
    <string name="title_activity_ventes">Ventes</string>
    <string name="title_activity_operation">Opérations</string>
    <string name="entree">Entrée</string>
    <string name="sortie">Sortie</string>
    <string name="nbr">Nbre</string>
    <string name="op">Opération</string>
    <string name="nb">Nbre</string>
    <string name="mtnn">Mte</string>
    <string name="fermer">Fermer</string>
    <string name="achat">Achats</string>
    <string name="divers">Divers</string>
    <string name="vente">Vente</string>
    <string name="date">Date</string>
    <string name="recap">Recapitulatif</string>
    <string name="imp">Imprimer</string>
    <string name="anyresult">liste vide</string>
    <string name="yes">Oui</string>
    <string name="imprimermsg">Voulez-vous imprimer?</string>
    <string name="pdf">PDF</string>
    <string name="xls">EXCEL</string>
    <string name="listeop">Liste des opérations</string>
    <string name="listeentre">Liste des entrées</string>
    <string name="listedesop">Liste de toute les opérations</string>
    <string name="listedesvente">Liste des ventes</string>
    <string name="adresse">" Adresse :"</string>
    <string name="tel">"Tel : "</string>
    <string name="opp">Op :</string>
    <string name="debit">Entrée :</string>
    <string name="credi">Sortie :</string>
    <string name="depense">Dépenses</string>
    <string name="ficname">Nom du fichier</string>
    <string name="docpdf">Document PDF</string>
    <string name="anyop">Aucune opération</string>
    <string name="docexcel">Document EXCEL</string>
    <string name="menu_op">Opération</string>
    <string name="listedesachat">Liste des achats</string>
    <string name="listedesdp">Liste des dépenses</string>
    <string name="listedesvt">Liste des ventes</string>
    <string name="listeopp">nom</string>
    <string name="menu_listeop">Liste des opérations</string>
    <string name="title_activity_depense">Dépenses</string>
    <string name="title_activity_depense_form">Dépense</string>
    <string name="mte">Montant</string>
    <string name="description">Description</string>
    <string name="menu_depense">Dépenses</string>
    <string name="depense_success">Dépense ajoutée</string>
    <string name="title_activity_commande">Commandes</string>
    <string name="cmd">Commande</string>
    <string name="title_activity_client">Clients</string>
    <string name="cnt">Contact :</string>
    <string name="adr">Adresse :</string>
    <string name="menu_partenaire">Partenaires</string>
    <string name="title_activity_partenaire_form">Partenaire</string>
    <string name="title_activity_commercial_form">Commercial</string>
    <string name="feminin">Feminin</string>
    <string name="masculin">Masculin</string>
    <string name="pm">Personne morale</string>
    <string name="raisonsocial">Raison sociale</string>
    <string name="prenom">Prenom</string>
    <string name="nom">Nom</string>
    <string name="contact">Contact</string>
    <string name="eamil">E-mail</string>
    <string name="partenaire_success">Partenaire ajouté</string>
    <string name="cmd_success">Commande ajoutée</string>
    <string name="save_cmd_confirm">Enregistrer la commande ?</string>
    <string name="cmdfr">Commandes fournisseur</string>
    <string name="cmdclt">Commandes client</string>
    <string name="adressee">Adresse</string>
    <string name="notransact">No Transaction :</string>
    <string name="netapaye">"Net Payer : "</string>
    <string name="remise">"Remise : "</string>
    <string name="recu">"Recu : "</string>
    <string name="rendu">"Rendu : "</string>
    <string name="dateoperation">"Date operation : "</string>
    <string name="generale">Générale</string>
    <string name="ipserver">Adresse serveur</string>
    <string name="ipserversumary">Adresse IP du serveur</string>
    <string name="impconfig">Imprimante</string>
    <string name="impext">Imprimante : externe</string>
    <string name="impint">Imprimante : interne</string>
    <string name="lastmsg">Message final</string>
    <string name="msgbottomticket">Message en bas du ticket</string>
    <string name="imprsum">Nom du peripherique bluetooth en charge de l\'impression</string>
    <string name="verrouiller">Verrouiller</string>
    <string name="offverrouiller">Pas vérrouillé</string>
    <string name="onverrouiller">Vérrouillé</string>
    <string name="passwordsummary">Mot de passe de vérrouillage de l\'application</string>
    <string name="mail">E-mail</string>
    <string name="mailsummary">E-mail de recuperation du mot de passe</string>
    <string name="indicateur">Indicateur</string>
    <string name="indicsummary">Indicateur pour se rappeler du mot de passe en cas d\'oublie</string>
    <string name="security">Sécurité</string>
    <string name="partenaire">Partenaire</string>
    <string name="menu_divers">Entrée/Sortie divers</string>
    <string name="sortie_d_argent">Sortie d\'argent</string>
    <string name="entr_d_argent">Entré d\'argent</string>
    <string name="vente_cr_dit">Vente à crédit</string>
    <string name="op_ration_annul_e">Opération annulée</string>
    <string name="commandee">Commandes</string>
    <string name="venteattente">Vente en attente</string>
    <string name="commerciale">Commercial</string>
    <string name="commercialoff">Utilisation de commercial : desactivé</string>
    <string name="commercialon">Utilisation de commercial : activé</string>
    <string name="sendmail">Envoyer un e-mail</string>
    <string name="indice">Indice</string>
    <string name="communication">Communication</string>
    <string name="communicationon">Communication : Online</string>
    <string name="communicationoff">Communication : Offline</string>
    <string name="ajout">Ajouter</string>
    <string name="valid">Valider</string>
    <string name="racourci">Raccourcis</string>
    <string name="menu_banquetransaction"><![CDATA[Banque <> Caisse]]></string>
    <string name="addbarcode">Lecteur code barre</string>
    <string name="menu_immo">Immobilisations</string>
    <string name="menu_placement">Placements</string>
    <string name="menu_dettebanque">Emprunts</string>
    <string name="societetitle">Nom de la sociéte</string>
    <string name="societedesc">Saisir le nom de votre société</string>
    <string name="remark">Remarques</string>
    <string name="menu_choose_file">Ajouter des partenaires</string>
    <string name="mouvementstock">Mouvement stock</string>
    <string name="reglements">Règlements</string>
    <string name="caisseonoff">Etat de la caisse</string>
    <string name="online">En ligne</string>
    <string name="offline">Hors ligne</string>
    <string name="papier">Papier imprimente</string>
    <string name="papiersum">Taille du papier d\'impression</string>
    <string name="petit">Petit</string>
</resources>