<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="projects.mediasoft.com.pointvente.activities.VenteFormActivity">


    <!--
    <item android:id="@+id/nouveau"
        android:title="@string/btn_effacer"
        android:orderInCategory="100"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_billet"
        android:title="@string/btn_billet"
        android:icon="@drawable/billetage"
        android:orderInCategory="100"
        app:showAsAction="always" />

    !-->

    <item android:id="@+id/action_dashboard"
        android:title="@string/racourci"
        android:orderInCategory="100"
        android:icon="@mipmap/ic_dashboard"
        app:showAsAction="always" />


    <item android:id="@+id/action_liste"
        android:title="@string/listeop"
        android:orderInCategory="100"
        android:icon="@mipmap/ic_recap"
        app:showAsAction="always" />

    <item android:id="@+id/action_racourci"
        android:title="@string/racourci"
        android:orderInCategory="100"
        android:icon="@mipmap/ic_raccourcis"
        app:showAsAction="always" />


    <item android:id="@+id/action_barcode"
        android:title="@string/addbarcode"
        android:orderInCategory="100"
        android:icon="@mipmap/ic_cam"
        app:showAsAction="always" />

    <item android:id="@+id/action_add"
        android:title="@string/ajout"
        android:orderInCategory="100"
        android:icon="@mipmap/ic_plus"
        app:showAsAction="always" />
</menu>
