<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="projects.mediasoft.com.pointvente.activities.ProduitActivity">

    <item
        android:id="@+id/menu_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always"
        android:title="@string/menu_search"/>


    <item android:id="@+id/action_imp"
        android:title="Imprimer"
        android:orderInCategory="100"
        android:icon="@drawable/ic_imp"
        app:showAsAction="always" />


    <item android:id="@+id/action_interval"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:icon="@drawable/ic_interval"
        app:showAsAction="always" />



    <item
        android:id="@+id/menu_choose_file"
        android:orderInCategory="100"
        android:title="@string/menu_choose_file"
        android:icon="@mipmap/menu_choose_file"
        app:showAsAction="always" />
</menu>
