<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@mipmap/ic_retrait"
            android:layout_marginRight="5dp"
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <TextView
            android:text="@string/sortie_d_argent"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@mipmap/ic_depot"
            android:layout_marginRight="5dp"
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <TextView
            android:text="@string/entr_d_argent"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@mipmap/ic_acredit"
            android:layout_marginRight="5dp"
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <TextView
            android:text="@string/vente_cr_dit"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@mipmap/ic_annuler"
            android:layout_marginRight="5dp"
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <TextView
            android:text="@string/op_ration_annul_e"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@mipmap/ic_attente"
            android:layout_marginRight="5dp"
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <TextView
            android:text="@string/venteattente"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@mipmap/ic_journal"
            android:layout_marginRight="5dp"
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <TextView
            android:text="@string/commandee"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
</LinearLayout>